Fixed left menu spacing from parent

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -83,7 +83,7 @@ nav.headerNav div ul{
 }
 .leftMenu {
 	position: absolute !important;
-	right: 8.3em;
+	right: 100%;
 	top: 0;
 	display:none;
 	border-right:1px solid #444;
